[package]
name = "webassembly-webgl-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Ovie Okeh <kevinokeh@gmail.com>"]
description = "A simple webgl viewer written in rust"
license = "MIT"
repository = "https://github.com/ovieokeh/webassembly-webgl-viewer-tutorial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document', 
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]
